Fix layout shift on image load

--- a/internal/assets/static/main.css
+++ b/internal/assets/static/main.css
@@ -1072,6 +1072,7 @@ kbd:active {
 
 .twitch-category-thumbnail {
     width: 5rem;
+    aspect-ratio: 3 / 4;
     border-radius: var(--border-radius);
 }
 
